@@ -927,27 +927,31 @@
     when the elevator alarm button is released. Default is <em>bell1-stop.wav</em>.<br>
     Example: <font size="2" face="Courier New, Courier, mono">AlarmSoundStop = 
     bell2-stop.wav</font></p>
-  <p align="left"><strong>17. FloorSkipText</strong> - sets the text that will 
+  <p align="left"><strong>17. BeepSound</strong> - the sound file to play when 
+    the elevator reaches a new floor. There is no default; if this is set, the 
+    beeps will be automatically enabled.<br>
+    Example: <font size="2" face="Courier New, Courier, mono">BeepSound = beep.wav</font></p>
+  <p align="left"><strong>18. FloorSkipText</strong> - sets the text that will 
     be shown in the floor indicator when passing non-serviced floors. The texture 
     for this must be loaded for it to show - of you set this to EX for example, 
     the texture it'll load is ButtonEX.jpg. Common values for this are EZ, X, 
     and EX (which stand for Express Zone).<br>
     Example: <font size="2" face="Courier New, Courier, mono">FloorSkipText = 
     EZ </font></p>
-  <p align="left"><strong>18. RecallFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>19. RecallFloor</strong> - sets the floor the elevator 
     will recall to during fire service phase 1 mode. Default is the lowest serviced 
     floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">RecallFloor = 5</font></p>
-  <p align="left"><strong>19. AlternateRecallFloor</strong> - sets the alternate 
+  <p align="left"><strong>20. AlternateRecallFloor</strong> - sets the alternate 
     floor the elevator will recall to during fire service phase 1 mode. Default 
     is the highest serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">AlternateRecallFloor 
     = 6</font></p>
-  <p align="left"><strong>20. ACPFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>21. ACPFloor</strong> - sets the floor the elevator 
     will stop at while in ACP (Anti-Crime Protection) mode. Default is the lowest 
     serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">ACPFloor = 5</font></p>
-  <p align="left"><strong>21. Doors</strong> - sets the number of doors the elevator 
+  <p align="left"><strong>22. Doors</strong> - sets the number of doors the elevator 
     will have. The default is 1. Set to 0 in order to have a doorless elevator.<br>
     Example: <font size="2" face="Courier New, Courier, mono">Doors = 2</font></p>
   <p align="left"></p>
