@@ -6,6 +6,7 @@ in a shaft or an elevator
 -added new buildings
 -added support for multiple floor indicators per elevator
 -floors can now have floor indicators
+-added support for elevator floor beeps
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
